// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/protobuf/timestamp.proto";
import "src/main/proto/wfa/measurement/internal/kingdom/report_details.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Proto representation of the internal Report entity type.
message Report {
  enum ReportState {
    REPORT_STATE_UNKNOWN = 0;

    // A Report is created. Each duchy needs to initialize locally for this
    // computation. The actual work done during initialization depends on the
    // protocol running for this report. For example, in the LLV2 protocol, each
    // duchy needs to send back a newly created ElGamal public key to be
    // used specifically for this report.
    AWAITING_DUCHY_INITIALIZATION = 1;

    // For new Reports, while Requisitions are being created, associated, and
    // fulfilled.
    AWAITING_REQUISITION_CREATION = 2;

    // All Requisitions are associated and fulfilled. Duchies must confirm that
    // they are ready to start.
    AWAITING_DUCHY_CONFIRMATION = 3;

    // Duchies may proceed with the computation.
    IN_PROGRESS = 4;

    // Terminal states
    SUCCEEDED = 5;
    FAILED = 6;
    CANCELLED = 7;
  }

  fixed64 external_advertiser_id = 1;
  fixed64 external_report_config_id = 2;
  fixed64 external_schedule_id = 3;
  fixed64 external_report_id = 4;

  google.protobuf.Timestamp create_time = 10;
  google.protobuf.Timestamp update_time = 11;
  google.protobuf.Timestamp window_start_time = 8;
  google.protobuf.Timestamp window_end_time = 9;

  ReportState state = 5;
  ReportDetails report_details = 6;
  string report_details_json = 7;
}
